--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ chrome-profiler-events*.json
 .settings/
 *.sublime-workspace
 
+
 # IDE - VSCode
 .vscode/*
 !.vscode/settings.json
@@ -29,6 +30,7 @@ chrome-profiler-events*.json
 !.vscode/launch.json
 !.vscode/extensions.json
 .history/*
+ngxm-input.iml
 
 # misc
 /.angular/cache
