--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,10 @@
       "ngxm-input": [
         "dist/ngxm-input/ngxm-input",
         "dist/ngxm-input"
+      ],
+      "ngxm-textarea": [
+        "dist/ngxm-textarea/ngxm-textarea",
+        "dist/ngxm-textarea"
       ]
     },
     "declaration": false,
