--- a/projects/ngxm-textarea/package.json
+++ b/projects/ngxm-textarea/package.json
@@ -1,7 +1,8 @@
 {
+  "version": "0.0.2",
   "name": "ngxm-textarea",
   "description": "NgxmTextarea - simplify, open-source textarea component for Angular.",
-  "homepage": "https://maxouni.github.io/ngxm-libs/",
+  "homepage": "https://maxouni.github.io/ngxm-libs/ngxm-textarea/",
   "bugs": {
     "url" : "https://github.com/maxouni/ngxm-libs/issues",
     "email" : "max@mishin.io"
@@ -10,7 +11,6 @@
     "email": "max@mishin.io",
     "name": "Max <maxouni> Mishin"
   },
-  "version": "0.0.1",
   "peerDependencies": {
     "@angular/common": "^13.1.0",
     "@angular/core": "^13.1.0"
